<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LFE_Link" >

    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue" />

    <EditText
        android:inputType="text"
        android:id="@+id/IPadress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IPadressinfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:text="@string/IPadress" ><requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/btnRec"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/Recinfo"
        android:layout_below="@+id/IPadress"
        android:src="@android:drawable/ic_btn_speak_now" />

    <TextView
        android:id="@+id/Recrepinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/IPadress"
        android:layout_below="@+id/btnRec"
        android:text="@string/Recrepinfo" />

    <TextView
        android:textIsSelectable="true"
        android:id="@+id/Recrep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Recrepinfo"
        android:layout_alignBottom="@+id/Recrepinfo"
        android:layout_toRightOf="@+id/Recrepinfo" />
    
    <TextView
        android:id="@+id/Repinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Recrepinfo"
        android:layout_below="@+id/Recrep"
        android:text="@string/Repinfo" />

    <TextView
        android:textIsSelectable="true"
        android:id="@+id/Rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Repinfo"
        android:layout_alignBottom="@+id/Repinfo"
        android:layout_toRightOf="@+id/Repinfo" />
    
    <TextView
        android:id="@+id/IPadressinfo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/IPadress"
        android:layout_below="@+id/bienvenue"
        android:layout_marginTop="18dp"
        android:text="@string/IPadressinfo" />
    
    <TextView
        android:id="@+id/tts_pref_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tts_pref_false" />

</RelativeLayout>