<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/btn_aide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/btn_aide"
        android:text="@string/btn_aide" />

    <TextView
        android:id="@+id/shake_expl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/axe_shake"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/shake_expl" />

    <ImageView
        android:id="@+id/axe_shake"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shake_expl"
        android:layout_below="@+id/btn_aide"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/shake_axe"
        android:src="@drawable/axe_shake" />

</RelativeLayout>
